<resources>
    <string name="app_name">Gibson OS</string>
    <string name="account_title">Add account</string>
    <string name="account_alias">Alias</string>
    <string name="account_user">User</string>
    <string name="account_password">Password</string>
    <string name="account_url">URL</string>
    <string name="account_save">Save</string>
    <string name="account_error_alias_exists">Aliasname already exists.</string>
    <string name="account_error_value_empty">Empty is not allowed.</string>
    <string name="account_error_no_model_found">No account model found!</string>
    <string name="account_error_not_exists">No account exists!</string>
    <string name="account_error_no_token">Account token doesn\'t exists!</string>
    <string name="login_title">Login</string>
    <string name="desktop_title">Desktop</string>
    <string name="desktop_error_load">Desktop can\'t be load!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="not_implemented_yet">Not implemented yet!</string>
    <string name="no_item_set">No item set!</string>
    <string name="response_error_json">JSON can\'t be parsed. Maybe wrong URL?</string>
    <string name="explorer_dir_error_response">Dir not in response!</string>
    <string name="fa_ad">&#xf641;</string>
    <string name="fa_address_book">&#xf2b9;</string>
    <string name="fa_address_card">&#xf2bb;</string>
    <string name="fa_adjust">&#xf042;</string>
    <string name="fa_air_freshener">&#xf5d0;</string>
    <string name="fa_align_center">&#xf037;</string>
    <string name="fa_align_justify">&#xf039;</string>
    <string name="fa_align_left">&#xf036;</string>
    <string name="fa_align_right">&#xf038;</string>
    <string name="fa_allergies">&#xf461;</string>
    <string name="fa_ambulance">&#xf0f9;</string>
    <string name="fa_american_sign_language_interpreting">&#xf2a3;</string>
    <string name="fa_anchor">&#xf13d;</string>
    <string name="fa_angle_double_down">&#xf103;</string>
    <string name="fa_angle_double_left">&#xf100;</string>
    <string name="fa_angle_double_right">&#xf101;</string>
    <string name="fa_angle_double_up">&#xf102;</string>
    <string name="fa_angle_down">&#xf107;</string>
    <string name="fa_angle_left">&#xf104;</string>
    <string name="fa_angle_right">&#xf105;</string>
    <string name="fa_angle_up">&#xf106;</string>
    <string name="fa_angry">&#xf556;</string>
    <string name="fa_ankh">&#xf644;</string>
    <string name="fa_apple_alt">&#xf5d1;</string>
    <string name="fa_archive">&#xf187;</string>
    <string name="fa_archway">&#xf557;</string>
    <string name="fa_arrow_alt_circle_down">&#xf358;</string>
    <string name="fa_arrow_alt_circle_left">&#xf359;</string>
    <string name="fa_arrow_alt_circle_right">&#xf35a;</string>
    <string name="fa_arrow_alt_circle_up">&#xf35b;</string>
    <string name="fa_arrow_circle_down">&#xf0ab;</string>
    <string name="fa_arrow_circle_left">&#xf0a8;</string>
    <string name="fa_arrow_circle_right">&#xf0a9;</string>
    <string name="fa_arrow_circle_up">&#xf0aa;</string>
    <string name="fa_arrow_down">&#xf063;</string>
    <string name="fa_arrow_left">&#xf060;</string>
    <string name="fa_arrow_right">&#xf061;</string>
    <string name="fa_arrow_up">&#xf062;</string>
    <string name="fa_arrows_alt">&#xf0b2;</string>
    <string name="fa_arrows_alt_h">&#xf337;</string>
    <string name="fa_arrows_alt_v">&#xf338;</string>
    <string name="fa_assistive_listening_systems">&#xf2a2;</string>
    <string name="fa_asterisk">&#xf069;</string>
    <string name="fa_at">&#xf1fa;</string>
    <string name="fa_atlas">&#xf558;</string>
    <string name="fa_atom">&#xf5d2;</string>
    <string name="fa_audio_description">&#xf29e;</string>
    <string name="fa_award">&#xf559;</string>
    <string name="fa_baby">&#xf77c;</string>
    <string name="fa_baby_carriage">&#xf77d;</string>
    <string name="fa_backspace">&#xf55a;</string>
    <string name="fa_backward">&#xf04a;</string>
    <string name="fa_bacon">&#xf7e5;</string>
    <string name="fa_bacteria">&#xe059;</string>
    <string name="fa_bacterium">&#xe05a;</string>
    <string name="fa_bahai">&#xf666;</string>
    <string name="fa_balance_scale">&#xf24e;</string>
    <string name="fa_balance_scale_left">&#xf515;</string>
    <string name="fa_balance_scale_right">&#xf516;</string>
    <string name="fa_ban">&#xf05e;</string>
    <string name="fa_band_aid">&#xf462;</string>
    <string name="fa_barcode">&#xf02a;</string>
    <string name="fa_bars">&#xf0c9;</string>
    <string name="fa_baseball_ball">&#xf433;</string>
    <string name="fa_basketball_ball">&#xf434;</string>
    <string name="fa_bath">&#xf2cd;</string>
    <string name="fa_battery_empty">&#xf244;</string>
    <string name="fa_battery_full">&#xf240;</string>
    <string name="fa_battery_half">&#xf242;</string>
    <string name="fa_battery_quarter">&#xf243;</string>
    <string name="fa_battery_three_quarters">&#xf241;</string>
    <string name="fa_bed">&#xf236;</string>
    <string name="fa_beer">&#xf0fc;</string>
    <string name="fa_bell">&#xf0f3;</string>
    <string name="fa_bell_slash">&#xf1f6;</string>
    <string name="fa_bezier_curve">&#xf55b;</string>
    <string name="fa_bible">&#xf647;</string>
    <string name="fa_bicycle">&#xf206;</string>
    <string name="fa_biking">&#xf84a;</string>
    <string name="fa_binoculars">&#xf1e5;</string>
    <string name="fa_biohazard">&#xf780;</string>
    <string name="fa_birthday_cake">&#xf1fd;</string>
    <string name="fa_blender">&#xf517;</string>
    <string name="fa_blender_phone">&#xf6b6;</string>
    <string name="fa_blind">&#xf29d;</string>
    <string name="fa_blog">&#xf781;</string>
    <string name="fa_bold">&#xf032;</string>
    <string name="fa_bolt">&#xf0e7;</string>
    <string name="fa_bomb">&#xf1e2;</string>
    <string name="fa_bone">&#xf5d7;</string>
    <string name="fa_bong">&#xf55c;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_book_dead">&#xf6b7;</string>
    <string name="fa_book_medical">&#xf7e6;</string>
    <string name="fa_book_open">&#xf518;</string>
    <string name="fa_book_reader">&#xf5da;</string>
    <string name="fa_bookmark">&#xf02e;</string>
    <string name="fa_border_all">&#xf84c;</string>
    <string name="fa_border_none">&#xf850;</string>
    <string name="fa_border_style">&#xf853;</string>
    <string name="fa_bowling_ball">&#xf436;</string>
    <string name="fa_box">&#xf466;</string>
    <string name="fa_box_open">&#xf49e;</string>
    <string name="fa_box_tissue">&#xe05b;</string>
    <string name="fa_boxes">&#xf468;</string>
    <string name="fa_braille">&#xf2a1;</string>
    <string name="fa_brain">&#xf5dc;</string>
    <string name="fa_bread_slice">&#xf7ec;</string>
    <string name="fa_briefcase">&#xf0b1;</string>
    <string name="fa_briefcase_medical">&#xf469;</string>
    <string name="fa_broadcast_tower">&#xf519;</string>
    <string name="fa_broom">&#xf51a;</string>
    <string name="fa_brush">&#xf55d;</string>
    <string name="fa_bug">&#xf188;</string>
    <string name="fa_building">&#xf1ad;</string>
    <string name="fa_bullhorn">&#xf0a1;</string>
    <string name="fa_bullseye">&#xf140;</string>
    <string name="fa_burn">&#xf46a;</string>
    <string name="fa_bus">&#xf207;</string>
    <string name="fa_bus_alt">&#xf55e;</string>
    <string name="fa_business_time">&#xf64a;</string>
    <string name="fa_calculator">&#xf1ec;</string>
    <string name="fa_calendar">&#xf133;</string>
    <string name="fa_calendar_alt">&#xf073;</string>
    <string name="fa_calendar_check">&#xf274;</string>
    <string name="fa_calendar_day">&#xf783;</string>
    <string name="fa_calendar_minus">&#xf272;</string>
    <string name="fa_calendar_plus">&#xf271;</string>
    <string name="fa_calendar_times">&#xf273;</string>
    <string name="fa_calendar_week">&#xf784;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_camera_retro">&#xf083;</string>
    <string name="fa_campground">&#xf6bb;</string>
    <string name="fa_candy_cane">&#xf786;</string>
    <string name="fa_cannabis">&#xf55f;</string>
    <string name="fa_capsules">&#xf46b;</string>
    <string name="fa_car">&#xf1b9;</string>
    <string name="fa_car_alt">&#xf5de;</string>
    <string name="fa_car_battery">&#xf5df;</string>
    <string name="fa_car_crash">&#xf5e1;</string>
    <string name="fa_car_side">&#xf5e4;</string>
    <string name="fa_caravan">&#xf8ff;</string>
    <string name="fa_caret_down">&#xf0d7;</string>
    <string name="fa_caret_left">&#xf0d9;</string>
    <string name="fa_caret_right">&#xf0da;</string>
    <string name="fa_caret_square_down">&#xf150;</string>
    <string name="fa_caret_square_left">&#xf191;</string>
    <string name="fa_caret_square_right">&#xf152;</string>
    <string name="fa_caret_square_up">&#xf151;</string>
    <string name="fa_caret_up">&#xf0d8;</string>
    <string name="fa_carrot">&#xf787;</string>
    <string name="fa_cart_arrow_down">&#xf218;</string>
    <string name="fa_cart_plus">&#xf217;</string>
    <string name="fa_cash_register">&#xf788;</string>
    <string name="fa_cat">&#xf6be;</string>
    <string name="fa_certificate">&#xf0a3;</string>
    <string name="fa_chair">&#xf6c0;</string>
    <string name="fa_chalkboard">&#xf51b;</string>
    <string name="fa_chalkboard_teacher">&#xf51c;</string>
    <string name="fa_charging_station">&#xf5e7;</string>
    <string name="fa_chart_area">&#xf1fe;</string>
    <string name="fa_chart_bar">&#xf080;</string>
    <string name="fa_chart_line">&#xf201;</string>
    <string name="fa_chart_pie">&#xf200;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_check_circle">&#xf058;</string>
    <string name="fa_check_double">&#xf560;</string>
    <string name="fa_check_square">&#xf14a;</string>
    <string name="fa_cheese">&#xf7ef;</string>
    <string name="fa_chess">&#xf439;</string>
    <string name="fa_chess_bishop">&#xf43a;</string>
    <string name="fa_chess_board">&#xf43c;</string>
    <string name="fa_chess_king">&#xf43f;</string>
    <string name="fa_chess_knight">&#xf441;</string>
    <string name="fa_chess_pawn">&#xf443;</string>
    <string name="fa_chess_queen">&#xf445;</string>
    <string name="fa_chess_rook">&#xf447;</string>
    <string name="fa_chevron_circle_down">&#xf13a;</string>
    <string name="fa_chevron_circle_left">&#xf137;</string>
    <string name="fa_chevron_circle_right">&#xf138;</string>
    <string name="fa_chevron_circle_up">&#xf139;</string>
    <string name="fa_chevron_down">&#xf078;</string>
    <string name="fa_chevron_left">&#xf053;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_chevron_up">&#xf077;</string>
    <string name="fa_child">&#xf1ae;</string>
    <string name="fa_church">&#xf51d;</string>
    <string name="fa_circle">&#xf111;</string>
    <string name="fa_circle_notch">&#xf1ce;</string>
    <string name="fa_city">&#xf64f;</string>
    <string name="fa_clinic_medical">&#xf7f2;</string>
    <string name="fa_clipboard">&#xf328;</string>
    <string name="fa_clipboard_check">&#xf46c;</string>
    <string name="fa_clipboard_list">&#xf46d;</string>
    <string name="fa_clock">&#xf017;</string>
    <string name="fa_clone">&#xf24d;</string>
    <string name="fa_closed_captioning">&#xf20a;</string>
    <string name="fa_cloud">&#xf0c2;</string>
    <string name="fa_cloud_download_alt">&#xf381;</string>
    <string name="fa_cloud_meatball">&#xf73b;</string>
    <string name="fa_cloud_moon">&#xf6c3;</string>
    <string name="fa_cloud_moon_rain">&#xf73c;</string>
    <string name="fa_cloud_rain">&#xf73d;</string>
    <string name="fa_cloud_showers_heavy">&#xf740;</string>
    <string name="fa_cloud_sun">&#xf6c4;</string>
    <string name="fa_cloud_sun_rain">&#xf743;</string>
    <string name="fa_cloud_upload_alt">&#xf382;</string>
</resources>